snapshots/syntax/statements/objects/call/procedure_call_no_arguments.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: InitializeRandomDNA
        - kind: Newline
          text: "\n"
